JTS-3256/JTS-3283 Playground compare: Make it possible to test combination of themes
Change-Id: I07d6bcb3683b0f1c482ff8b7d7e16f2dd94e5d41